--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <button type="submit">Na’vi Marmoset</button>
       <button type="submit">Golden Snub Nosed Monkey</button>
       <button type="submit">Nepali Sacred Langur</button>
-      <div>Correct Golden Snub Nosed Monkey! <span id="percentile1"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Golden_snub-nosed_monkey">Learn more here!</a></div>
+      <h1>After the person pushes any button a box will apear below them that will say what the correct answer is and what percent of people got the answer right. After that there will be a short bio about the animal along with a video or voice recording about it and a link to its wiki page as seen below</h1>
+      <div>Correct Golden Snub Nosed Monkey! <span id="percentile1"></span>% got this answer right</div> 
+      <div>Rhinopithecus roxellana are endemic to the mountain forests in the heart of China. They can live in elevations over 11,000 feet above sea level eating mostly leaves and fruit and have complex social units led by an alpha male. See how they survive in the harsh mountain winters in the video below and also <a href="https://en.wikipedia.org/wiki/Golden_snub-nosed_monkey">Learn more here!</a></div>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/rVZqNKFM_sc?si=3Zirw7-SGnFUY-w4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
@@ -20,15 +22,19 @@
       <button type="submit">Pichi</button>
       <button type="submit">Strawberry Sandshrew</button>
       <button type="submit">Pink Fairy Armadillo</button>
-      <div>Correct Pink Fairy Armadillo! <span id="percentile2"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Pink_fairy_armadillo">Learn more here!</a></div>
+      <div>Correct Pink Fairy Armadillo! <span id="percentile2"></span>% got this answer right</div> 
+      <div>Chlamyphorus truncatus is the smallest species of Armadillo in the world endemic to the deserts and scrub lands of central Argentina. Their diet consists mostly of insects and they are very skilled diggers which comes in handy when they face predators. You can see them digging in the video below and also <a href="https://en.wikipedia.org/wiki/Pink_fairy_armadillo">Learn more here!</a></div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/xlcuOwzqOGs?si=ByGVOnOr5NtRbDK2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
-        <img src="C:/photo/Echidna" alt="Echidna"/>
+        <img src="/photo/Echidna.jpg" alt="Echidna"/>
         <button type="submit">Tropical Long-Nosed Hedgehog</button>
         <button type="submit">Eastern Long Beaked Echidna</button>
         <button type="submit">Spiked Ecuadorian Anteater</button>
         <button type="submit">Snuffleupagus</button>
-        <div>Correct Eastern Long Beaked Echidna! <span id="percentile3"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Eastern_long-beaked_echidna">Learn more here!</a></div>
+        <div>Correct Eastern Long Beaked Echidna! <span id="percentile3"></span>% got this answer right</div>
+        <div>Zaglossus bartoni is native to the jungles of Papua New Guinea. Like their smaller and cuter <a href="https://en.wikipedia.org/wiki/Short-beaked_echidna">Australian cousins</a> they are Monotremes meaning they are mammals that lay eggs and are 1 of only five species that do this. They use their long beaked snouts to dig underground searching for worms or insects. You can see them hunting in the video below and also <a href="https://en.wikipedia.org/wiki/Eastern_long-beaked_echidna">Learn more here!</a></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/rzLJT0rxJhw?si=hCpPGx0lM5c6jrFw&amp;start=18" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
       <img src="/photo/Bat.jpg" alt="Bat"/>
@@ -36,7 +42,8 @@
       <button type="submit">Giant Congolese Fruit Bat</button>
       <button type="submit">Hammer-Headed Bat</button>
       <button type="submit">Bibundi Bat</button>
-      <div>Correct Hammer-Headed Bat! <span id="percentile4"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Hammer-headed_bat">Learn more here!</a></div>
+      <div>Correct Hammer-Headed Bat! <span id="percentile4"></span>% got this answer right</div>
+      <div>Hypsignathus monstrosus are very common bats found all across Western and Central Africa. They are one of the largest bat species in the world with a wingspan of about 1 meter in length. Their diet consists entirely of fruit and unlike insect eating bats their face irregularities have nothing to do with echolocation. Only the males have these peculiar facial features and they are used to create a mating call to attract females. You can here the call below and <a href="https://en.wikipedia.org/wiki/Hammer-headed_bat">Learn more here!</a></div>
       <audio controls> <source src="Brigham Young University 2.m4a" type="audio/mp4"></audio>
     </section>
     <section>
@@ -45,7 +52,8 @@
         <button type="submit">Malayan Hystrix</button>
         <button type="submit">Quilled 4 Toed Sloth</button>
         <button type="submit">Pig-Nosed Porcupine</button>
-        <div>Correct Coendous! <span id="percentile5"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Brazilian_porcupine">Learn more here!</a></div>
+        <div>Correct Coendous! <span id="percentile5"></span>% got this answer right</div>
+        <div>Coendou prehensilis is also known as the Brazilian Porcupine or the Prehensiled-Tailed Porcupine and is found across South America and use their long tails to hang over tree branches where they live most of their lives. See a fun interaction with them below and <a href="https://en.wikipedia.org/wiki/Brazilian_porcupine">Learn more here!</a></div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Xz3btMhdQ6Y?si=3kMSGbdGnAYorj_Q&amp;start=222" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
@@ -54,7 +62,9 @@
         <button type="submit">Cambodian Muntjac</button>
         <button type="submit">Vampire Puku</button>
         <button type="submit">Fanged Dwarf Brocket</button>
-        <div>Correct Tufted Deer! <span id="percentile6"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Tufted_deer">Learn more here!</a></div> 
+        <div>Correct Tufted Deer! <span id="percentile6"></span>% got this answer right</div>
+        <div>Elaphodus cephalophus is a small species of deer found in the forests of Southern China and Northern Burma. They are named after their "tuft" of black hair on the top of their heads that hide their small horns. Their most prominant feature though is the protruding fangs only found on males. The males use these fangs to both protect their territory and attract mates. You can see tufted deer in captivity below and also <a href="https://en.wikipedia.org/wiki/Tufted_deer">Learn more here!</a></div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/A6eQiZH_syI?si=tfrYBzSWWdQVMXNi&amp;start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
     </section>
     <section>
       <img src="/photo/Cat.jpeg" alt="Cat"/>
@@ -62,7 +72,8 @@
       <button type="submit">Manul</button>
       <button type="submit">Waffles McCuddlefluff</button>
       <button type="submit">Shilüüs</button>
-      <div>Correct Manul! <span id="percentile7"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Pallas%27s_cat">Learn more here!</a></div>
+      <div>Correct Manul! <span id="percentile7"></span>% got this answer right</div>
+      <div>Otocolobus manul are small wild cats found across Northern and Central Asia from Mongolia to Iran. They have the densest fur coat of any cat species and hunt mostly small rodents. You can see them hunt below and also <a href="https://en.wikipedia.org/wiki/Pallas%27s_cat">Learn more here!</a></div>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/kgrV3_g9rYY?si=xk32YZ4yA67ORzTN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
@@ -71,7 +82,8 @@
         <button type="submit">Spiked Bumblebee Civet</button>
         <button type="submit">Punk-Rock Porcupine</button>
         <button type="submit">Lowland Streaked Tenrec</button>
-        <div>Correct Lowland Streaked Tenrec! <span id="percentile8"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Lowland_streaked_tenrec">Learn more here!</a></div>
+        <div>Correct Lowland Streaked Tenrec! <span id="percentile8"></span>% got this answer right</div>
+        <div>Hemicentetes semispinosus is one of 36 species of <a href="https://en.wikipedia.org/wiki/Tenrec">tenrec</a> endemic to Madagascar. They are not rodents at all and in fact are closer relatives to elaphants and manatees. They use their spines not only for protection from predators such as birds or <a href="https://en.wikipedia.org/wiki/Fossa_(animal)">Fossa</a> but also to communicate. They rub their small quills together to make a clicking sound similar to the chirps of grasshoppers. They are the only species of mammal to make this sort of sound known as <a href="https://en.wikipedia.org/wiki/Stridulation">stridulation</a>. You can see them stridulating below and also <a href="https://en.wikipedia.org/wiki/Lowland_streaked_tenrec">Learn more here!</a></div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/W9kJKu4cpXM?si=rUt8mhoGiAKH05mm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
@@ -80,7 +92,8 @@
         <button type="submit">White-Speckled Ground Squirrel</button>
         <button type="submit">Eastern Quoll</button>
         <button type="submit">Pīwakawaka</button>
-        <div>Correct Eastern Quoll! <span id="percentile9"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Eastern_quoll">Learn more here!</a></div>
+        <div>Correct Eastern Quoll! <span id="percentile9"></span>% got this answer right</div>
+        <div>Dasyurus viverrinus are small marsupials that where once found all across Australia. They come in grayish tan coats and the jet black seen above but their iconic white spots are found on all forms from birth. With the introduction of foxes and weizels in mainland Australia the species soon became extinct in that area and can now be only found on the island of Tasmania with their feisty cousins the <a href="https://en.wikipedia.org/wiki/Tasmanian_devil">Tasmainan Devils</a>. You can see efforts to reintroduce them to mainland Austraia below and also <a href="https://en.wikipedia.org/wiki/Eastern_quoll">Learn more here!</a></div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ZybAdUiXng0?si=M71Ns7UYdW9D-BQL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
     <section>
@@ -89,13 +102,15 @@
         <button type="submit">Indonesian Cat-Bear</button>
         <button type="submit">Hla Khaing</button>
         <button type="submit">Raharjo</button>
-        <div>Correct Binturong! <span id="percentile10"></span>% got this answer right <a href="https://en.wikipedia.org/wiki/Binturong">Learn more here!</a></div>
+        <div>Correct Binturong! <span id="percentile10"></span>% got this answer right</div>
+        <div>Arctictis binturong also know as the CatBear are not closely related to cats or bears but are in fact closely related to <a href="https://en.wikipedia.org/wiki/Civet">civets</a>. They live across the jungles of Indonesia and Southeast Asia and use their enormous tails as a fifth limb to hang across trees. They are omnivors that will eat anything from fruit to small birds. They also are quite infamous for having pee that smells exactly like movie popcorn. You can see a fun interaction with them below and also <a href="https://en.wikipedia.org/wiki/Binturong">Learn more here!</a></div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/8VIJ8IJgiZ0?si=7YQ5RaS3s6USRU2n" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
   </main>
   <footer>
+    <h1>At the end of the quiz you will see how many of the answers you got correct as well as how well you did compared to other people. Then you will be able pick to either sign out or try again</h1>
     <div>Good job! You got <span id="correctAnswers"></span> out of <span id="wrongAnswers"></span> which makes you in the <span id="percentile"></span>% percentile!</div>
     <button type="submit">Retry</button>
-    <button onclick="location.href='login.html'" type="submit">Logout</button>
+    <button onclick="location.href='sort.html'" type="submit">Logout</button>
   </footer>
 </body>
