--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <body>
     <header>
-        <title>Sign Up</title>
+        <h1>Login</h1>
     </header>
     <main>
         <form>
@@ -11,6 +11,7 @@
             <label>Password:</label>
             <input><br>
             <button onclick="location.href='index.html'" type="submit">Login</button>
+            <p>Sorry it looks like either you Username or Password in incorrect</p>
         </form>
     </main>      
 </body>
