--- a/login.html
+++ b/login.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <h1>Login</h1>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-    <header>
-        <h1>Login</h1>
-    </header>
     <main>
         <form>
-            <label>Username:</label>
+            <label class= "lab-text">Username:</label>
             <input><br>
-            <label>Password:</label>
+            <label class= "lab-text">Password:</label>
             <input><br>
-            <button onclick="location.href='index.html'" type="submit">Login</button>
+            <button class="button-62" type="button" onclick="window.location.href='index.html'">Login</button>
             <p>Sorry it looks like either you Username or Password in incorrect</p>
         </form>
     </main>      
