--- a/sort.html
+++ b/sort.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <h1>Take The Weird Zoo Quiz!</h1>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
-      <header>
-        <h1>Take The Weird Zoo Quiz!</h1>
-      </header>
       <main>
         <form>
-            <button onclick="location.href='login.html'" type="submit">Login</button>
-            <button onclick="location.href='setup.html'" type="submit">Create Account</button>
+          <button class="button-62" type="button" onclick="window.location.href='login.html'">Login</button>
+          <button class="button-62" type="button" onclick="window.location.href='setup.html'">Create Account</button>
         </form>
       </main> 
 </body>
