--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     </section>
   </main>
   <footer>
+    <h2><a href="https://github.com/eastonrodriguez/260-code.git">github link</a></h2>
     <h2>At the end of the quiz you will see how many of the answers you got correct as well as how well you did compared to other people. Then you will be able pick to either sign out or try again</h2>
     <div>Good job! You got <span id="correctAnswers"></span> out of <span id="wrongAnswers"></span> which makes you in the <span id="percentile"></span>% percentile!</div>
     <button class="button-62" type="submit">Retry</button>
