--- a/setup.html
+++ b/setup.html
@@ -15,8 +15,12 @@
             <input><br>
             <label class= "lab-text">Confirm Password:</label>
             <input><br>
-            <p>Password must be a minimum of 8 characters with at least 1 lowercase letter, uppercase letter, number, and special character such as !@#$%</p>
-            <p>Your Password does not match</p>
+            <div>
+                <p>Password must be a minimum of 8 characters with at least 1 lowercase letter, uppercase letter, number, and special character such as !@#$%</p>
+            </div>
+            <div class="info-box">
+                <p>Your Password does not match</p>
+            </div>
             <button class="button-62" type="button" onclick="window.location.href='login.html'">Sign Up</button>
         </form>
       </main> 
