--- a/login.html
+++ b/login.html
@@ -14,7 +14,9 @@
             <label class= "lab-text">Password:</label>
             <input><br>
             <button class="button-62" type="button" onclick="window.location.href='index.html'">Login</button>
-            <p>Sorry it looks like either you Username or Password in incorrect</p>
+            <div class="info-box">
+                <p>Sorry it looks like either you Username or Password is incorrect</p>
+            </div>
         </form>
     </main>      
 </body>
